<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Burgeon</string>
    <string name="signature">Burgeon</string>
    <string name="display_options_custom_button">Custom View!</string>
    <string name="display_options_menu_item">Menu Item</string>
    <string name="action_bar_settings_action_provider_no_handling">Handling in onOptionsItemSelected avoided</string>
    <string name="longclick">长按进入复选模式</string>
    <string name="toggle_split_on">显示SplitActionBar</string>
    <string name="toggle_split_off">隐藏SplitActionBar</string>
    <string name="checkme">复选模式</string>
    <string name="list_action_mode">list Activity</string>
    <string name="btn_add_tab">btn_add_tab</string>
    <string name="btn_remove_tab">btn_remove_tab</string>
    <string name="btn_toggle_tabs">btn_toggle_tabs</string>
    <string name="btn_remove_all_tabs">btn_remove_all_tabs</string>
    <string name="ShowDialog">ShowDialog</string>
    <string name="RadioButton1">RadioButton1</string>
    <string name="RadioButton2">RadioButton2</string>
    <string name="twstextview">twstextview</string>
    <string name="twsedittext">twsedittext</string>
    <string name="list_check_action_mode">list check Activity</string>
    <string name="ToggleButton">ToggleButton</string>
    <string name="CheckedTextView">CheckedTextView</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="preference_tittle">preference</string>
    <string name="preference_category_normal">一般设置</string>
    <string name="preference_category_advanced">高级设置</string>
    <string name="preference_preference_tittle">Preference</string>
    <string name="preference_checkbox_tittle">CheckboxPreference""</string>
    <string name="preference_edittext_tittle">EditTextPreference“”</string>
    <string name="preference_edittext_defaultvalue">DefaultValue</string>
    <string name="preference_volume_tittle">VolumePreference</string>
    <string name="preference_seekbar_tittle">SeekBarPreference</string>
    <string name="preference_seekbardialog_tittle">SeekBarDialogPreference</string>
    <string name="preference_ringtone_tittle">RingtonePreference</string>
    <string name="preference_preferencescreen_title">" \" 更多设置\" "</string>
    <string name="preference_list_tittle">ListPreference</string>
    <string name="preference_common_dialogtittle">设置</string>
    <string name="preference_common_summary">This is a summary.</string>
    <string name="toggle_back_on">显示返回按钮</string>
    <string name="toggle_back_off">隐藏返回按钮</string>
    <string name="toggle_title_on">显示标题栏</string>
    <string name="toggle_title_off">隐藏标题栏</string>
    <string name="toggle_subtitle_on">显示副标题</string>
    <string name="toggle_subtitle_off">隐藏副标题</string>
    <string name="toggle_actionbar_on">显示ActionBar</string>
    <string name="toggle_actionbar_off">隐藏ActionBar</string>
    <string name="toggle_custom_on">显示自定义view</string>
    <string name="toggle_custom_off">隐藏自定义view</string>
    <string name="toggle_back_enable_on">启用返回按钮事件</string>
    <string name="toggle_back_enable_off">禁用返回按钮事件</string>
    <string name="toggle_action_mode">进入全选模式</string>
    <string name="toggle_edit_btn_on">显示编辑按钮</string>
    <string name="toggle_edit_btn_off">隐藏编辑按钮</string>
    <string name="toggle_more_btn_on">显示更多按钮</string>
    <string name="toggle_more_btn_off">隐藏更多按钮</string>
    <string name="action_bar_split_content">显示ActionBar的split模式，是将ActionMenu分离至页面底部显示，在Mainfest中配置uiOption=splitActionBarWhenNarrow即可</string>
    <string name="activity_label_ActionBarDisplayOptions">ActionBar/ActionBarDisplayOptions</string>
    <string name="activity_label_ActionBarGradient">ActionBar/GradientBackground</string>
    <string name="activity_label_ActionBarNormalButton">ActionBar/ActionBarNormalButton</string>
    <string name="activity_label_ActionBarNormalHolo">ActionBar/ActionBarNormalHolo</string>
    <string name="activity_label_ActionBarNormalEdit">ActionBar/ActionBarNormalEdit</string>
    <string name="activity_label_ActionBarShowHide">ActionBar/ActionBarShowHide</string>
    <string name="activity_label_ActionModeNormal">ActionBar/ActionMode</string>
    <string name="activity_label_ActionBarSpinner">ActionBar/ActionBarSpinner</string>
    <string name="activity_label_ActionModeMultiChoiceListActivity">MultiChoiceList</string>
    <string name="activity_label_ActionMenuSelected">ActionBar/ActionMenuSelected</string>
    <string name="activity_label_ActionMenuSelectedText">ActionBar/ActionMenuSelectedText</string>
    <string name="activity_label_TwsBaseWidget">Widget/TwsBaseWidget</string>
    <string name="activity_label_PreferenceActivityDemo">Preference</string>
    <string name="activity_label_TabViewpagerActivity">Tab/TabViewpager</string>
    <string name="activity_label_AlertDialogSamples">AlertDialogs</string>
    <string name="activity_label_AlertActivitySamples">AlertActivity</string>
    <string name="activity_label_FragmentDemo">Fragment</string>
    <string name="activity_label_TwsActionBarTabSecondCustom">Tab/TwsActionBarTabSecondCustom</string>
    <string name="activity_label_TwsActionBarTabSecond">Tab/TwsActionBarTabSecond</string>
    <string name="activity_label_TwsActionBarTabCustom">Tab/TwsActionBarTabCustom</string>
    <string name="activity_label_TwsActionBarTab">Tab/TwsActionBarTab</string>
    <string name="activity_label_ListViewBlur">Blur/ListView</string>
    <string name="activity_label_ListViewFullScreenBlur">Blur/ListView_FullScreen</string>
    <string name="activity_label_ListViewFullScreenNoBlur">Blur/ListView_FullScreen_NoBlur</string>
    <string name="activity_label_ActionModeListViewFullScreenBlur">Blur/ActionMode_ListView_FullScreen</string>
    <string name="activity_label_ScrollViewBlur">Blur/ScrollView</string>
    <string name="activity_label_ScrollViewFullScreenBlur">Blur/ScrollView_FullScreen</string>
    <string name="activity_label_ScrollViewFullScreenNoBlur">Blur/ScrollView_FullScreen_NoBlur</string>
    <string name="activity_label_GridViewBlur">Blur/GridView</string>
    <string name="activity_label_ActionModeGridViewBlur">Blur/ActionMode_GridView</string>
    <string name="activity_label_GridViewNoBlur">Blur/GridViewNoBlur</string>
    <string name="activity_label_ActionModeBlur">Blur/ActionMode</string>
    <string name="activity_label_ActionModeNoBlur">Blur/ActionMode_NoBlur</string>
    <string name="activity_label_SimpleListView">Widget/Listview/Simple</string>
    <string name="activity_label_NormalListView">Widget/Listview/Normal</string>
    <string name="activity_label_CheckListView">Widget/Listview/Check</string>
    <string name="activity_label_CustomExpandableListActivity">Widget/Listview/ExpandableListView_Custom</string>
    <string name="activity_label_SimpleExpandableListActivity">Widget/Listview/ExpandableListView_Default</string>
    <string name="activity_label_SortListviewActivity">Widget/Listview/SortListView</string>
    <string name="activity_label_ActionModeCheckListActivity">Widget/Listview/CheckList</string>
    <string name="activity_label_ListViewTest">Widget/Listview/ListView_Default</string>
    <string name="activity_label_ListViewComplex">Widget/Listview/ListView_Custom</string>
    <string name="activity_label_MultipleChoiceList">Widget/Listview/ListView_Multi</string>
    <string name="activity_label_ActionBarMiniMode">ActionBar/ActionMiniMode</string>
    <string name="activity_label_SideBarActivity">Widget/SideBar</string>
    <string name="activity_label_ButtonRipple">Widget/Button/ButtonRipple</string>
    <string name="activity_label_TwsEditTextActivity">Widget/EditText/TwsEditText</string>
    <string name="activity_label_TwsCombinationButtonActivity">Widget/Button/TwsCombinationButton</string>
    <string name="activity_label_TwsButtonActivity">Widget/Button/TwsButton</string>
    <string name="activity_label_PogressBarActivity">Widget/PogressBar/Base</string>
    <string name="activity_label_TwsCircularProgressViewActivity">Widget/PogressBar/TwsCircularProgressView</string>
    <string name="activity_label_DatePickerView">Widget/Pickers/DatePicker</string>
    <string name="activity_label_DateTimePickerView">Widget/Pickers/DateTimePicker</string>
    <string name="activity_label_TimePickerView">Widget/Pickers/TimePicker</string>
    <string name="activity_label_PickerDialogOutside">Widget/Pickers/PickerOutSide</string>
    <string name="activity_label_NumberPickerView">Widget/Pickers/NumberPicker</string>
    <string name="activity_label_SearchResultActivity">Widget/EditText/TwsSearch</string>
    <string name="action_bar_display_options_title">ActionBarDisplayOptions</string>
    <string name="Button">Button</string>
    <string name="Dialog">Dialog</string>
    <string name="Toast">Toast</string>
    <string name="OptionA">Easy</string>
    <string name="OptionB">Nor</string>
    <string name="OptionC">hard</string>
    <string name="Switch">Switch</string>
    <string name="SearchView">SearchView</string>
    <string name="EditText">EditText</string>
    <string name="TwsEditText">TwsEditText</string>
    <string name="ProgressBar">ProgressBar</string>
    <string name="SeekBar">SeekBar</string>
    <string name="RatingBar">RatingBar</string>
    <string name="Spinner">Spinner</string>
    <string name="AutoComplete">AutoComplete</string>
    <string name="add_fragment">  添加Fragment  </string>
    <string name="remove_fragment">  移除Fragment  </string>
    <string name="replace_fragment">  替换Fragment  </string>
    <string name="alert_dialog_bottom_single">底部弹出的单选对话框</string>
    <string name="alert_dialog_bottom_mult">底部弹出的多选对话框</string>
    <string name="alert_dialog_bottom_botton">底部带有按钮的对话框</string>
    <string name="alert_dialog_bottom">底部弹出的对话框</string>
    <string name="alert_dialog_not_dismiss">不会主动消失的对话框</string>
    <string name="alert_dialog_two_buttons">OK Cancel dialog with a message</string>
    <string name="alert_dialog_two_buttons_old_school">OK Cancel dialog with not title</string>
    <string name="alert_dialog_two_buttons_holo_light">OK Cancel dialog with Holo Light theme</string>
    <string name="alert_dialog_two_buttons2">OK Cancel dialog with a long message</string>
    <string name="alert_dialog_two_buttons2ultra">OK Cancel dialog with ultra long message</string>
    <string name="alert_dialog_select_button">List dialog</string>
    <string name="alert_dialog_single_choice">Single choice list</string>
    <string name="alert_dialog_multi_choice">Repeat alarm</string>
    <string name="alert_dialog_multi_choice_cursor">Send Call to VoiceMail</string>
    <string name="textAppearanceSmall">12sp: textAppearanceSmall</string>
    <string name="textAppearance">14sp: textAppearance</string>
    <string name="textAppearanceMedium">16sp: textAppearanceMedium</string>
    <string name="textAppearanceLarge">18sp: textAppearanceLarge</string>
    <string name="textAppearanceSmallInverse">12sp: textAppearanceSmallInverse</string>
    <string name="textAppearanceInverse">14sp: textAppearanceInverse</string>
    <string name="textAppearanceMediumInverse">16sp: textAppearanceMediumInverse</string>
    <string name="textAppearanceLargeInverse">18sp: textAppearanceLargeInverse</string>
    <string name="twsTextSmallBlackZ_menuitem">12sp: twsTextSmallBlackZ_menuitem</string>
    <string name="twsTextDialogButton">16sp: twsTextDialogButton</string>
    <string name="twsTextSmallBlackShadowZ">16sp: twsTextSmallBlackShadowZ</string>
    <string name="twsTextActionBarTitle">24sp: twsTextActionBarTitle</string>
    <string name="twsTextActionBarSubTitle">12sp: twsTextActionBarSubTitle</string>
    <string name="circle_light_green">clg</string>
    <string name="circle_dark_green">cdg</string>
    <string name="rectangle_light_green">rlg</string>
    <string name="rectangle_dark_green">rdg</string>
    <string name="circle_dark_red">cdr</string>
</resources>