<?xml version="1.0" encoding="utf-8"?>
<com.rickdynasty.tws.core.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tws="http://schemas.android.com/apk/res-auto" >

    <com.rickdynasty.tws.core.preference.CheckBoxPreference
        android:key="wifi"
        android:title="@string/preference_preference_tittle" />

    <com.rickdynasty.tws.core.preference.EditTextPreference
        android:dependency="wifi"
        android:layout="?android:attr/preferenceLayoutChild"
        android:title="@string/preference_preference_tittle" />

    <com.rickdynasty.tws.core.preference.Preference
        android:key="Preference"
        android:summary="@string/preference_common_summary"
        android:title="@string/preference_preference_tittle" />

    <com.rickdynasty.tws.core.preference.CheckBoxPreference
        android:key="CheckBoxPreference"
        android:summary="@string/preference_common_summary"
        android:title="@string/preference_checkbox_tittle" />

    <com.rickdynasty.tws.core.preference.EditTextPreference
        android:defaultValue="@string/preference_edittext_defaultvalue"
        android:dialogTitle="@string/preference_common_dialogtittle"
        android:key="EditTextPreference"
        android:summary="@string/preference_common_summary"
        android:title="@string/preference_edittext_tittle" />

    <com.rickdynasty.tws.core.preference.VolumePreference
        android:defaultValue="0.5"
        android:dialogTitle="@string/preference_common_dialogtittle"
        android:key="VolumePreference"
        android:persistent="true"
        android:summary="@string/preference_common_summary"
        android:title="@string/preference_volume_tittle" />

    <com.rickdynasty.tws.core.preference.SeekBarDialogPreference
        android:dialogTitle="@string/preference_common_dialogtittle"
        android:key="SeekBarDialogPreference"
        android:summary="@string/preference_common_summary"
        android:title="@string/preference_seekbardialog_tittle" />
    <com.rickdynasty.tws.core.preference.SeekBarDialogPreference
        android:dialogTitle="@string/preference_common_dialogtittle"
        android:key="SeekBarDialogPreference"
        android:summary="@string/preference_common_summary"
        android:title="@string/preference_seekbardialog_tittle"
        tws:preferenceArrow="false" />

    <com.rickdynasty.tws.core.preference.ListPreference
        android:dialogTitle="@string/preference_common_dialogtittle"
        android:entries="@array/list_entries"
        android:entryValues="@array/list_entries_value"
        android:key="ListPreference"
        android:summary="@string/preference_common_summary"
        android:title="@string/preference_list_tittle" />

    <com.rickdynasty.tws.core.preference.PreferenceScreen android:title="@string/preference_preferencescreen_title" >
        <com.rickdynasty.tws.core.preference.CheckBoxPreference
            android:key="CheckBoxPreference"
            android:summary="@string/preference_common_summary"
            android:title="@string/preference_checkbox_tittle" />
        <com.rickdynasty.tws.core.preference.CheckBoxPreference
            android:key="CheckBoxPreference"
            android:summary="@string/preference_common_summary"
            android:title="@string/preference_checkbox_tittle" />
    </com.rickdynasty.tws.core.preference.PreferenceScreen>

    <com.rickdynasty.tws.core.preference.PreferenceCategory android:title="@string/preference_category_advanced" >
        <com.rickdynasty.tws.core.preference.SwitchPreference
            android:key="SwitchPreference"
            android:summaryOff="summaryOff"
            android:summaryOn="summaryOn"
            android:switchTextOff=" "
            android:switchTextOn=" "
            android:title="SwitchPreference" />

        <com.rickdynasty.tws.core.preference.SeekBarPreference
            android:icon="@drawable/ic_search"
            android:key="SeekBarPreference"
            android:max="100"
            android:progress="60" />

        <com.rickdynasty.tws.core.preference.RingtonePreference
            android:key="RingtonePreference"
            android:ringtoneType="alarm"
            android:showSilent="true"
            android:summary="@string/preference_common_summary"
            android:title="@string/preference_ringtone_tittle" />
    </com.rickdynasty.tws.core.preference.PreferenceCategory>

</com.rickdynasty.tws.core.preference.PreferenceScreen>